# validation-aeson-example

./: .gitignore  LICENSE  README.md  failure.json  success.json  validation-aeson-example.cabal
src/: Main.hs  Todo.hs  Types.hs
test/: HLint.hs
